<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">


    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <ImageView
            android:id="@+id/chat_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_chat_up"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/chat_image"
            android:gravity="center"
            android:text="@string/chat_text"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <ImageView
            android:id="@+id/contacts_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_contact_up"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/contacts_image"
            android:gravity="center"
            android:text="@string/contact_text"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <ImageView
            android:id="@+id/discover_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_discover_up"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/discover_image"
            android:gravity="center"
            android:text="@string/discover_text"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <ImageView
            android:id="@+id/mysetting_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_mysetting_up"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/mysetting_image"
            android:gravity="center"
            android:text="@string/me_text"/>
    </RelativeLayout>
</LinearLayout>