<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/divider_bg_grey"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:layout_marginTop="20dp"
        android:background="@color/text_color_white">

        <ImageView
            android:id="@+id/moment_logo"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            android:src="@drawable/icon_moments"/>

        <TextView
            android:id="@+id/moment_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/moment_logo"
            android:layout_alignTop="@id/moment_logo"
            android:layout_toRightOf="@id/moment_logo"
            android:gravity="center_vertical"
            android:paddingLeft="20dp"
            android:text="@string/moment_text"
            android:textSize="20dp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/moment_logo"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@id/moment_logo"
            android:paddingBottom="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:src="@drawable/button_right"/>
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/text_color_white">

        <ImageView
            android:id="@+id/scan_logo"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            android:src="@drawable/icon_scan"/>

        <TextView
            android:id="@+id/scan_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/scan_logo"
            android:layout_alignTop="@id/scan_logo"
            android:layout_toRightOf="@id/scan_logo"
            android:gravity="center_vertical"
            android:paddingLeft="20dp"
            android:text="@string/scan_text"
            android:textSize="20dp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/scan_logo"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@id/scan_logo"
            android:paddingBottom="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:src="@drawable/button_right"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginLeft="10dp"
        android:background="@color/divider_bg_grey"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/text_color_white">

        <ImageView
            android:id="@+id/shake_logo"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            android:src="@drawable/icon_shake_hand"/>

        <TextView
            android:id="@+id/shake_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/shake_logo"
            android:layout_alignTop="@id/shake_logo"
            android:layout_toRightOf="@id/shake_logo"
            android:gravity="center_vertical"
            android:paddingLeft="20dp"
            android:text="@string/shake_text"
            android:textSize="20dp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/shake_logo"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@id/shake_logo"
            android:paddingBottom="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:src="@drawable/button_right"/>
    </RelativeLayout>
</LinearLayout>