<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fragment_bg"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:layout_marginTop="20dp"
        android:background="@color/text_color_white"
        android:gravity="center">

        <ImageView
            android:id="@+id/user_avatar"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_margin="10dp"
            android:src="@drawable/icon_moments"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignBottom="@id/user_avatar"
            android:layout_alignTop="@id/user_avatar"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@id/user_avatar"
            android:orientation="vertical">

            <TextView
                android:id="@+id/user_name_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:paddingLeft="20dp"
                android:text="xxx"
                android:textSize="30dp"/>

            <TextView
                android:id="@+id/ourchat_id_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:paddingLeft="20dp"
                android:text="@string/account_text"
                android:textSize="20dp"/>
        </LinearLayout>


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/user_avatar"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@id/user_avatar"
            android:paddingBottom="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:src="@drawable/button_right"/>
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/text_color_white">

        <ImageView
            android:id="@+id/photo_logo"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            android:src="@drawable/icon_photo"/>

        <TextView
            android:id="@+id/photo_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/photo_logo"
            android:layout_alignTop="@id/photo_logo"
            android:layout_toRightOf="@id/photo_logo"
            android:gravity="center_vertical"
            android:paddingLeft="20dp"
            android:text="@string/photo_text"
            android:textSize="20dp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/photo_logo"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@id/photo_logo"
            android:paddingBottom="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:src="@drawable/button_right"/>
    </RelativeLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/text_color_white"
        android:paddingLeft="10dp"
        android:src="@color/divider_bg_grey"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/text_color_white">

        <ImageView
            android:id="@+id/collection_logo"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            android:src="@drawable/icon_collection"/>

        <TextView
            android:id="@+id/collection_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/collection_logo"
            android:layout_alignTop="@id/collection_logo"
            android:layout_toRightOf="@id/collection_logo"
            android:gravity="center_vertical"
            android:paddingLeft="20dp"
            android:text="@string/collection_text"
            android:textSize="20dp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/collection_logo"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@id/collection_logo"
            android:paddingBottom="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:src="@drawable/button_right"/>
    </RelativeLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/text_color_white"
        android:paddingLeft="10dp"
        android:src="@color/divider_bg_grey"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/text_color_white">

        <ImageView
            android:id="@+id/setting_logo"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            android:src="@drawable/icon_setting"/>

        <TextView
            android:id="@+id/setting_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/setting_logo"
            android:layout_alignTop="@id/setting_logo"
            android:layout_toRightOf="@id/setting_logo"
            android:gravity="center_vertical"
            android:paddingLeft="20dp"
            android:text="@string/setting_text"
            android:textSize="20dp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/setting_logo"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@id/setting_logo"
            android:paddingBottom="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:src="@drawable/button_right"/>
    </RelativeLayout>
</LinearLayout>